[package]
name = "kv_web_integration"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
kv_web_core = { path = "../kv_web_core" }
kv_web_runtime = { path = "../kv_web_runtime" }
bitdrop_v2 = { path = "../bitdrop_v2" }

# CUDA backend required by kv_web_integration/src/gpu.rs
cust = "0.3.2"
